--- a/sites/default/files/fontyourface/font.css
+++ b/sites/default/files/fontyourface/font.css
@@ -1,4 +1,4 @@
 .field-name-field-price { font-family: 'Cinzel'; font-style: normal; font-weight: 700; }
-.field-name-field-title, .field-name-field-categor, .menu_label_title, .our_history { font-family: 'Cinzel'; font-style: normal; font-weight: normal; }
+.cinzel, .menu_label_title, .our_history { font-family: 'Cinzel'; font-style: normal; font-weight: normal; }
 .discover { font-family: 'Herr Von Muellerhoff'; font-style: normal; font-weight: normal; }
-.field-name-field-ingrdients, .ultimate { font-family: 'Montserrat'; font-style: normal; font-weight: normal; }
+.montserrat, .ultimate { font-family: 'Montserrat'; font-style: normal; font-weight: normal; }
