--- a/sites/all/themes/progressive/css/CVC.css
+++ b/sites/all/themes/progressive/css/CVC.css
@@ -175,7 +175,7 @@ h5.menu_post {
 }
 .menu_content_classic .menu_dots {
     position: absolute;
-    top: 14px;
+    top: 18px;
     left: 0;
     right: 0;
     z-index: 1;
@@ -216,8 +216,7 @@ h5.menu_post {
   margin-bottom: 40px;
 }
 .menu_item_restaurant .field-name-field-title{
-  position: absolute;
- 
+  float: left;
   text-transform: uppercase;
   font-size: 17px;
   font-weight: 600;
@@ -225,12 +224,14 @@ h5.menu_post {
 }
 .menu_item_restaurant .field-name-field-ingrdients {
 position: absolute;
-top: 30px;
+top: 50px;
   font-size: 14px;
 }
+.menu_item_restaurant .first .field-name-field-ingrdients {
+top: 32px;
+}
 .menu_item_restaurant .field-name-field-price{
-  position: absolute;
-left: 100%;
+  float: right;
   text-transform: uppercase;
   font-size: 16px;
   background: white;
@@ -252,34 +253,114 @@ left: 100%;
     line-height: 1.2em;
     letter-spacing: 2px;
 }
-.first .field-name-field-categor a {
-   pointer-events: none;
+div.views-row.views-row-1.views-row-odd.views-row-first{
+  text-align: center;
+} 
+.views-row-first .menu-post {
+  top: 10px;
+}
+.views-row-first .menu-post, .views-row-first .view-menu-ingrdients{
+  text-align: left;
+  margin-bottom: 15px;
+} 
+.view-menu-category {
+  visibility: hidden;
+}
+
+.views-row-first .view-menu-category a {
+  color: black;
+}
+.views-row-first .view-menu-category {
+  color: black;
+  visibility:visible;
+font-size: 26px;
+background: #fff;
+text-transform: uppercase;
+letter-spacing: 2px;
+border-bottom: 1px solid #222;
+display: inline-block;
+pointer-events: none;
    cursor: default;
    text-decoration: none;
+   margin-bottom: 20px;
 }
-.menu_item_restaurant .first {
-  margin-top: 80px;
-  font-size: 30px;
+h5.menu-post{
+  font-weight: 600;
+font-size: 14px;
+text-transform: uppercase;
+position: relative;
+margin-bottom: 5px;
+}
+span.menu_title {
+  position: relative;
+z-index: 2;
+font-size: 18px;
+background: #fff;
+top: -5px;
+}
+.menu_title, .menu_price{
+  font-size: 16px!important;
+}
+span.menu_dots {
+  position: absolute;
+top: 14px;
+left: 0;
+right: 0;
+z-index: 1;
+margin: 0;
+border: 0;
+height: 3px;
+display: block;
+background-image: radial-gradient(circle closest-side, #ccc 80%, #fff 10%);
+background-position: bottom;
+background-size: 4px 2px;
+background-repeat: repeat-x;
+}
+span.menu_price {
+  position: absolute;
+top: -5px;
+right: 0;
+font-size: 17px;
+color: #222;
+z-index: 2;
+background: #fff;
+}
+.block_menu_home_restaurant {
+border-width: 1px;
+border-color: rgb(208, 208, 208);
+padding: 10px;
+top: 30px;
+left: 20px;
+right: 20px;
+bottom: 30px;
+}
 
-}
 .column_restaurant{
   float: none;
     margin: 0 auto;
 }
+.view-video-block {
+  margin-top: 50px;
+}
 .field-name-field-points {
   position: absolute;
-    top: 17px;
+    top: 20px;
     left: 0;
     right: 0;
     z-index: -1;
     margin: 0;
     border: 0;
-    height: 3px;
-    display: block;
+   /* height: 3px; 
+    display: block; */
     background-image: radial-gradient(circle closest-side,#ccc 80%,#fff 10%);
     background-position: bottom;
     background-size: 4px 2px;
     background-repeat: repeat-x;
+}
+.first .field-name-field-points {
+  position: absolute;
+    top: -26px;
+    
 }
 
 .logoW {
@@ -329,4 +410,16 @@ margin-bottom: 10px;
 
 .logoW .description {
   background: transparent;
+}
+
+.video_container .video-js{
+      position: relative;
+    padding-bottom: 40%;
+    height: 0!important;
+    width: inherit!important;
+    overflow: hidden;
+}
+.video_container .video-js .vjs-tech{
+ width: inherit;
+ height: initial;
 }
