--- a/sites/default/files/fontyourface/font.css
+++ b/sites/default/files/fontyourface/font.css
@@ -1,4 +1,5 @@
 .field-name-field-price { font-family: 'Cinzel'; font-style: normal; font-weight: 700; }
+.pane-term-name { font-family: 'Cinzel Decorative'; font-style: normal; font-weight: normal; }
 .cinzel, .menu_label_title, .our_history { font-family: 'Cinzel'; font-style: normal; font-weight: normal; }
-.discover { font-family: 'Herr Von Muellerhoff'; font-style: normal; font-weight: normal; }
+.gold_title { font-family: 'Herr Von Muellerhoff'; font-style: normal; font-weight: normal; }
 .montserrat, .ultimate { font-family: 'Montserrat'; font-style: normal; font-weight: normal; }
